.cabal: fixed the category label
Ignore-this: 7cc7d00e9eacafa053a2fa446e964268

darcs-hash:40258f775416e5388c14b0877c2084de65967d13

--- a/prelude-safeenum.cabal
+++ b/prelude-safeenum.cabal
@@ -17,7 +17,7 @@ Copyright:      Copyright (c) 2012--2013 wren ng thornton
 License:        BSD3
 License-File:   LICENSE
 
-Category:       Data
+Category:       Prelude
 Synopsis:
     A redefinition of the Prelude's Enum class in order to render it safe.
 Description:
