--- a/prelude-safeenum.cabal
+++ b/prelude-safeenum.cabal
@@ -9,7 +9,7 @@ Build-Type:     Simple
 
 Name:           prelude-safeenum
 Version:        0.1.0
-Stability:      experimental
+Stability:      provisional
 Homepage:       http://code.haskell.org/~wren/
 Author:         wren ng thornton
 Maintainer:     wren@community.haskell.org
@@ -21,7 +21,13 @@ Category:       Prelude
 Synopsis:
     A redefinition of the Prelude's Enum class in order to render it safe.
 Description:
-    A redefinition of the Prelude's Enum class in order to render it safe. That is, the Haskell Language Report defines pred, succ, fromEnum, and toEnum to be partial functions when the type is Bounded, but this is unacceptable. We define a new type-class hierarchy for enumeration which is safe and also generalizes to cover types which can only be enumerated in one direction.
+    A redefinition of the Prelude's Enum class in order to render
+    it safe. That is, the Haskell Language Report defines pred,
+    succ, fromEnum, and toEnum to be partial functions when the
+    type is Bounded, but this is unacceptable. We define a new
+    type-class hierarchy for enumeration which is safe and also
+    generalizes to cover types which can only be enumerated in one
+    direction.
 
 Tested-With:
     GHC ==6.12.1, GHC ==7.6.1
