--- a/prelude-safeenum.cabal
+++ b/prelude-safeenum.cabal
@@ -1,5 +1,5 @@
 ----------------------------------------------------------------
--- wren ng thornton <wren@community.haskell.org>    ~ 2013.06.01
+-- wren ng thornton <wren@community.haskell.org>    ~ 2014.03.07
 ----------------------------------------------------------------
 
 -- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
@@ -8,12 +8,12 @@ Cabal-Version:  >= 1.6
 Build-Type:     Simple
 
 Name:           prelude-safeenum
-Version:        0.1.0.1
+Version:        0.1.1
 Stability:      provisional
 Homepage:       http://code.haskell.org/~wren/
 Author:         wren ng thornton
 Maintainer:     wren@community.haskell.org
-Copyright:      Copyright (c) 2012--2013 wren ng thornton
+Copyright:      Copyright (c) 2012--2014 wren ng thornton
 License:        BSD3
 License-File:   LICENSE
 
@@ -30,7 +30,7 @@ Description:
     direction.
 
 Tested-With:
-    GHC ==6.12.1, GHC ==7.6.1
+    GHC ==6.12.1, GHC ==7.6.1, GHC ==7.8.2
 Extra-source-files:
     AUTHORS, README, VERSION
 Source-Repository head
