--- a/prelude-safeenum.cabal
+++ b/prelude-safeenum.cabal
@@ -1,5 +1,5 @@
 ----------------------------------------------------------------
--- wren ng thornton <wren@community.haskell.org>    ~ 2014.03.30
+-- wren gayle romano <wren@community.haskell.org>   ~ 2014.03.30
 ----------------------------------------------------------------
 
 -- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
@@ -11,9 +11,9 @@ Name:           prelude-safeenum
 Version:        0.1.1.1
 Stability:      provisional
 Homepage:       http://code.haskell.org/~wren/
-Author:         wren ng thornton
+Author:         wren gayle romano
 Maintainer:     wren@community.haskell.org
-Copyright:      Copyright (c) 2012--2014 wren ng thornton
+Copyright:      Copyright (c) 2012--2014 wren gayle romano
 License:        BSD3
 License-File:   LICENSE
 
