--- a/prelude-safeenum.cabal
+++ b/prelude-safeenum.cabal
@@ -1,5 +1,5 @@
 ----------------------------------------------------------------
--- wren gayle romano <wren@community.haskell.org>   ~ 2014.03.30
+-- wren gayle romano <wren@community.haskell.org>   ~ 2015.05.30
 ----------------------------------------------------------------
 
 -- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
@@ -8,12 +8,12 @@ Cabal-Version:  >= 1.6
 Build-Type:     Simple
 
 Name:           prelude-safeenum
-Version:        0.1.1.1
+Version:        0.1.1.2
 Stability:      provisional
 Homepage:       http://code.haskell.org/~wren/
 Author:         wren gayle romano
 Maintainer:     wren@community.haskell.org
-Copyright:      Copyright (c) 2012--2014 wren gayle romano
+Copyright:      Copyright (c) 2012--2015 wren gayle romano
 License:        BSD3
 License-File:   LICENSE
 
@@ -32,7 +32,7 @@ Description:
 Tested-With:
     GHC ==6.12.1, GHC ==7.6.1, GHC ==7.8.0
 Extra-source-files:
-    AUTHORS, README, VERSION
+    AUTHORS, README, CHANGELOG
 Source-Repository head
     Type:     darcs
     Location: http://community.haskell.org/~wren/prelude-safeenum
