--- a/prelude-safeenum.cabal
+++ b/prelude-safeenum.cabal
@@ -1,5 +1,5 @@
 ----------------------------------------------------------------
--- wren gayle romano <wren@community.haskell.org>   ~ 2021.10.16
+-- wren gayle romano <wren@cpan.org>                ~ 2021.10.17
 ----------------------------------------------------------------
 
 -- Cabal >=1.10 is required by Hackage.
@@ -9,10 +9,11 @@ Build-Type:     Simple
 Name:           prelude-safeenum
 Version:        0.1.1.3
 Stability:      provisional
-Homepage:       http://wrengr.org
+Homepage:       https://wrengr.org/software/hackage.html
+Bug-Reports:    https://github.com/wrengr/prelude-safeenum/issues
 Author:         wren gayle romano
 Maintainer:     wren@cpan.org
-Copyright:      Copyright (c) 2012--2021 wren gayle romano
+Copyright:      Copyright (c) 2012–2021 wren gayle romano
 License:        BSD3
 License-File:   LICENSE
 
@@ -32,7 +33,7 @@ Extra-source-files:
     AUTHORS, README.md, CHANGELOG
 
 -- This should work as far back as GHC 6.12.1, but we don't verify that by CI.
--- <https://github.com/wrengr/bytestring-trie/actions?query=workflow%3Aci>
+-- <https://github.com/wrengr/prelude-safeenum/actions?query=workflow%3Aci>
 Tested-With:
     GHC ==8.0.2,
     GHC ==8.2.2,
@@ -55,11 +56,11 @@ Flag base4
                  version of base they use.
 ----------------------------------------------------------------
 Library
-    Default-Language: Haskell2010
+    Default-Language:  Haskell2010
     Hs-Source-Dirs:    src
     Exposed-Modules:   Prelude.SafeEnum
                      , Data.Number.CalkinWilf
-    
+
     -- I think this is all that needs doing to get rid of the warnings?
     if flag(base4)
         Build-Depends: base >= 4 && < 5
