--- a/prelude-safeenum.cabal
+++ b/prelude-safeenum.cabal
@@ -1,20 +1,25 @@
-----------------------------------------------------------------
--- wren gayle romano <wren@cpan.org>                ~ 2021.11.02
-----------------------------------------------------------------
+Cabal-Version:  2.2
+-- Cabal >=2.2 is required for:
+--    <https://cabal.readthedocs.io/en/latest/cabal-package.html#common-stanzas>
+-- Since 2.1, the Cabal-Version must be the absolutely first thing
+-- in the file, even before comments.  Also, no longer uses ">=".
+--    <https://github.com/haskell/cabal/issues/4899>
 
--- Cabal >=1.10 is required by Hackage.
-Cabal-Version:  >= 1.10
-Build-Type:     Simple
+----------------------------------------------------------------
+-- wren gayle romano <wren@cpan.org>                ~ 2022.05.25
+----------------------------------------------------------------
 
 Name:           prelude-safeenum
 Version:        0.1.1.4
+Build-Type:     Simple
 Stability:      provisional
 Homepage:       https://wrengr.org/software/hackage.html
 Bug-Reports:    https://github.com/wrengr/prelude-safeenum/issues
 Author:         wren gayle romano
 Maintainer:     wren@cpan.org
-Copyright:      Copyright (c) 2012–2021 wren gayle romano
-License:        BSD3
+Copyright:      2012–2022 wren romano
+-- Cabal-2.2 requires us to say "BSD-3-Clause" not "BSD3"
+License:        BSD-3-Clause
 License-File:   LICENSE
 
 Category:       Prelude
